# arbitrage

./: Cargo.toml  fortuna.http
src/: main.rs
src/crawler/: mod.rs
