[package]
name = "arbitage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = { version="4.4"}
actix-tls={ version="3.1", feature = "openssl" }
awc={version="3.2", features =["openssl"] }
